--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
 
-  <link rel="stylesheet" href="./css/global.css" />
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
   <header>
-    <div class="logo">
-      <svg class="h-8 w-8 text-primary" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-        <path clip-rule="evenodd"
-          d="M12.0799 24L4 19.2479L9.95537 8.75216L18.04 13.4961L18.0446 4H29.9554L29.96 13.4961L38.0446 8.75216L44 19.2479L35.92 24L44 28.7521L38.0446 39.2479L29.96 34.5039L29.9554 44H18.0446L18.04 34.5039L9.95537 39.2479L4 28.7521L12.0799 24Z"
-          fill="currentColor" fill-rule="evenodd"></path>
+    <h1>
+      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <polyline points="16 18 22 12 16 6"></polyline>
+        <polyline points="8 6 2 12 8 18"></polyline>
       </svg>
-      <h1>DevJobs</h1>
-    </div>
+      DevJobs
+    </h1>
 
     <nav>
-      <a href="">Inicio</a>
-      <a href="">Empleos</a>
+      <!-- <a href="">
+        Inicio
+      </a> -->
+      <a href="./views/empleos.html">Empleos</a>
     </nav>
 
     <div>
       <a href="">Publicar un empleo</a>
-      <a href="">Iniciar sesión</a>
+      <!-- <a href="">Iniciar sesión</a> -->
     </div>
   </header>
 
@@ -41,17 +42,19 @@
       <p>Únete a la comunidad más grande de desarrolladores y encuentra tu próxima oportunidad.</p>
 
       <form role="search">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
-          class="icon icon-tabler icons-tabler-outline icon-tabler-search">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
-          <path d="M21 21l-6 -6" />
-        </svg>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-search">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+            <path d="M21 21l-6 -6" />
+          </svg>
 
-        <input required type="text" placeholder="Buscar empleos por título, habilidad o empresa">
+          <input required type="text" placeholder="Buscar empleos por título, habilidad o empresa">
 
-        <button type="submit">Buscar</button>
+          <button disabled type="submit">Buscar</button>
+        </div>
       </form>
     </section>
 
@@ -104,6 +107,7 @@
   <footer>
     <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
   </footer>
+
 </body>
 
 </html>
